--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	
 	<link rel="stylesheet" href="style.css">
 	<title>Тестовая страница</title>
-	<script type="text/javascript" src="testJS.js"></script>
+	
 
 	<!-- Required meta tags -->
     <meta charset="utf-8">
@@ -27,24 +27,77 @@
 		</div>
 	</div> -->
 
-	<nav class="navbar navbar-expand-lg navbar-default bg-light">
+	<nav class="navbar navbar-expand-lg navbar-default bg-dark sticky-top">
 		
 		<a href="#" class="navbar-brand">
 			<img src="logo.png" width="60" height="60" alt="logo">
 		</a>
-		<div>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportetContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
+
+		<div class="collapse navbar-collapse" id="navbarSupportedContent">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item active">
+					<a href="#" class="nav-link">Home</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link">Pricing</a>
+				</li>
+				<li class="nav-item">
+					<a href="#" class="nav-link disabled">About us</a>
+				</li>
+			</ul>
+			<form class="form-inline my-2 my-lg-0">
+				<input type="text" class="form-control mr-sm-2" placeholder="Search" aria-label="Search">
+				<button class="btn btn-outline-success my-2 my-sm-0">Search</button>
+			</form>
+
+		</div>
+		<!-- Bootstrap 3-->
+		<!-- <div>
 			<ul class="nav navbar-nav">
 				<li class="active"><a class="nav-link" href="#">Главная</a></li>
 				<li><a class="nav-link" href="#">О нас</a></li>
 				<li><a class="nav-link" href="#">Обратная связь</a></li>
-				<!--<button class="btn btn-success">BUTTON</button>-->
+				<!--<button class="btn btn-success">BUTTON</button>
 						
 			</ul>
-		</div>
+		</div> -->
 	</nav>
+	
+	<div class="container-fluid p-0">
+		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			<ol class="carousel-indicators">
+				<li class="active" data-target="carouselExampleIndicators" data-slide-to="0"></li>
+				<li data-target="carouselExampleIndicators" data-slide-to="1"></li>
+				<li data-target="carouselExampleIndicators" data-slide-to="2"></li>
+			</ol>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img src="image/1.jpg" alt="" class="d-block w-100">
+				</div>
+				<div class="carousel-item ">
+					<img src="image/2.jpg" alt="" class="d-block w-100">
+				</div>
+				<div class="carousel-item ">
+					<img src="image/3.jpg" alt="" class="d-block w-100">
+				</div>
+			</div>
+			<a href="carouselExampleIndicators" class="carousel-control-prev" role="button" data-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="sr-only">Previous</span>
+			</a>
+			<a href="carouselExampleIndicators" class="carousel-control-next" role="button" data-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="sr-only">Next</span>
+			</a>
+		</div>
+	</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+	<script type="text/javascript" src="testJS.js"></script>
 </body>
 </html>
