--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	
+
 	<link rel="stylesheet" href="style.css">
 	<title>Тестовая страница</title>
-	
+
 
 	<!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-	
+
 </head>
 <body>
 	<!-- <div class="container-fluid">
@@ -28,7 +28,7 @@
 	</div> -->
 
 	<nav class="navbar navbar-expand-lg navbar-default bg-dark sticky-top">
-		
+
 		<a href="#" class="navbar-brand">
 			<img src="logo.png" width="60" height="60" alt="logo">
 		</a>
@@ -39,13 +39,13 @@
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav mr-auto">
 				<li class="nav-item active">
-					<a href="#" class="nav-link">Home</a>
+					<a href="#" class="nav-link">Домой</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link">Pricing</a>
+					<a href="#" class="nav-link">Словарь</a>
 				</li>
 				<li class="nav-item">
-					<a href="#" class="nav-link disabled">About us</a>
+					<a href="#" class="nav-link" data-toggle="modal" data-target="#exampleModal">Регистрация</a>
 				</li>
 			</ul>
 			<form class="form-inline my-2 my-lg-0">
@@ -61,12 +61,13 @@
 				<li><a class="nav-link" href="#">О нас</a></li>
 				<li><a class="nav-link" href="#">Обратная связь</a></li>
 				<!--<button class="btn btn-success">BUTTON</button>
-						
+
 			</ul>
 		</div> -->
 	</nav>
-	
-	<div class="container-fluid p-0">
+
+<!-- КАРУСЕЛЬ не работает-->
+	<!-- <div class="container-fluid p-0">
 		<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
 			<ol class="carousel-indicators">
 				<li class="active" data-target="carouselExampleIndicators" data-slide-to="0"></li>
@@ -93,7 +94,29 @@
 				<span class="sr-only">Next</span>
 			</a>
 		</div>
+	</div> -->
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModal" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modl-title" id="exampleModalLabel">Modal title</h5>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close" name="button">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-dismiss="modal" name="button">Close</button>
+				<button type="button" class="btn btn-primary" name="button">Save</button>
+			</div>
+		</div>
 	</div>
+</div>
+
+</div>
 
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
